crates/solidity/testing/snapshots/bindings_output/expressions/revert_named_args/generated/0.4.22-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:2:18]
   │
 2 │ ╭─▶     error Failure(
   ┆ ┆   
 5 │ ├─▶     );
   │ │            
   │ ╰──────────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:8:23]
   │
 8 │         revert Failure({severity: 100, cause: "Testing"});
   │                       ─────────────────┬─────────────────  
   │                                        ╰─────────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     error Failure(
   │     ──┬── ───┬───  
   │       ╰──────────── unresolved
   │              │     
   │              ╰───── def: 2
   │ 
 7 │     function test() public {
   │              ──┬─  
   │                ╰─── def: 3
 8 │         revert Failure({severity: 100, cause: "Testing"});
   │         ───┬── ───┬───  
   │            ╰──────────── refs: built-in, built-in
   │                   │     
   │                   ╰───── def: 4
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭───│ ▶ contract Test {
  2 │ │   ╭─▶     error Failure(
    ┆ ┆   ┆   
  5 │ │ │ ├─▶     );
    │ │ │ │            
    │ │ │ ╰──────────── definiens: 2
  6 │ │ ╭───▶ 
    ┆ ┆ ┆     
  8 │ │ │             revert Failure({severity: 100, cause: "Testing"});
    │ │ │     ─────────────────────────────┬─────────────────────────────  
    │ │ │                                  ╰─────────────────────────────── definiens: 4
  9 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 3
 10 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 1
────╯
